updated the swagger docs to include Fx and Rgb
